src/github.com/ebay/akutan/query/parser/testdata/select/errors/agg_func.bql
SELECT (BOB(?a) as ?Bob) 
WHERE {
?a ?b ?c
}
